--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
   <meta property="og:site_name" content="LoRa-RP2040" />
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:title" content="LoRa-RP2040" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXBEMMNGQH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-MXBEMMNGQH');
+  </script>
+
   <script type="application/ld+json">
     {
       "description": "LoRa communication library for Raspberry Pi RP2040 Microcontroller.",
